Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23576

Qmake: Crash when deleting build configuration while parsing

XMLWordPrintable

    • a12d3721c05b720b709c4b275dbf94f43187a9ea (qt-creator/qt-creator/master)

      • Add some build configurations for a large project
      • Delete one configuration
      • Quickly delete another one, before parsing is done

      Trace:

      1  QtPrivate::ExceptionStore::throwPossibleException                                                       Qt5Core                   0x7ffeddca0030 
      2  QFutureInterfaceBase::waitForResult                                                                     Qt5Core                   0x7ffeddca258b 
      3  QmakeProjectManager::QmakeProFile::applyAsyncEvaluate                                                   qmakeparsernodes.cpp 1661 0x7ffed0eb8f97 
      4  QmakeProjectManager::QmakeProFile::~QmakeProFile                                                        qmakeparsernodes.cpp 1210 0x7ffed0eb5309 
      5  QmakeProjectManager::QmakeProFile::`vector deleting destructor'                                         QmakeProjectManager4      0x7ffed0eb71be 
      6  QmakeProjectManager::QmakeBuildSystem::~QmakeBuildSystem                                                qmakeproject.cpp     240  0x7ffed0ed456d 
      7  QmakeProjectManager::QmakeBuildSystem::`vector deleting destructor'                                     QmakeProjectManager4      0x7ffed0ed565e 
      8  QmakeProjectManager::QmakeBuildConfiguration::`vector deleting destructor'                              QmakeProjectManager4      0x7ffed0ef6dba 
      9  ProjectExplorer::Target::removeDeployConfiguration                                                      target.cpp           363  0x7ffec0ae1468 
      10 QtPrivate::QFunctorSlotObject<<lambda_9b1c5c422fbc430d7a4a480359af7413>,0,QtPrivate::List<>,void>::impl qobjectdefs_impl.h   445  0x7ffec0b1326d 
      11 QObject::qt_static_metacall                                                                             Qt5Core                   0x7ffedde66010 
      12 QAbstractButton::clicked                                                                                Qt5Widgets                0x7ffedf8b95f8 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes