QmakeProjectManager: Fix access to deleted object

Amends c7d8b9b01c.

Fixes: QTCREATORBUG-23576
Change-Id: I7de6679f3dd5ba950561d560195e5af5bfaf90a5
Reviewed-by: Orgad Shaneh <orgads@gmail.com>